Dropbox progregg, maven tasks